# stash-pass-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/stash_pass/: cli.py
src/stash_pass/settings/: cli.py  core.py
src/stash_pass/utils/: crypto.py
src/stash_pass/vault/: core.py
stash_pass/vault/: cli.py
tests/: smoke_test.py
